    http://groups.google.com/group/rubycas-server/browse_thread/thread/5eade3793cb590e9
    Note that extra attributes of type other than String or Numeric are serialized 
    into YAML format before being sent along to the client.
  * Added an MD5-password version of the SQL authenticator for Drupal and any other
    database that stores its passwords in hashed form (thanks malcolmm).
       
* Changes to existing functionality:
  * Service URIs are now automatically normalized. For example, if the service 
    URI given to the server has a 'ticket' parameter, the ticket will now be 
    automatically stripped. This is to avert any possible issues raised by 
    misbehaving CAS clients (the CAS ticket should never be part of the service 
    URI). Same goes for other CAS-related parameters like 'service', 'renew',
    and 'gateway'. Additionally, the trailing '/' and '?' characters are
    automatically stripped from URLs, since, for example, "http://google.com/"
    is almost certainly equivalent to "http://google.com".
  * The expire_sessions config variable is now respected -- ticket granting
    ticket cookies are set with an expiry datetime, so that the SSO session
    is effectively terminated once the ticket_granting_ticket_expiry period
    is reached.
  * If present, the HTTP_X_FORWARDED_FOR header is used for recording the
    client's address. This is useful when the server is running behind a reverse
    proxy, but it should not be considered authoritative since it can be
    easily spoofed.
  * The 'service' field in the 'casserver_st' table has been changed from
    VARCHAR(255) to TEXT in order to accomodate service URIs longer than 255
    characters (fixes issue #46).
  * The CAS XML responses are no longer whitespace-formatted (i.e. Markaby's
    auto-indentation has been turned off). Apparently the whitespace was
    causing problems with mod_auth_cas. See:
    http://groups.google.com/group/rubycas-server/browse_thread/thread/e482fe09999b73d3